unsupported/static_h/external/esprima/test_fixtures/es2017/async/invalid-await/invalid-await-function-name1.js
async function f() { async function await() {} }
